19/10/22-16h53: add TCs for Visual Validation (applitools)

--- a/settings/external/com.kms.katalon.keyword.Applitools-Keywords.properties
+++ b/settings/external/com.kms.katalon.keyword.Applitools-Keywords.properties
@@ -1,5 +1,5 @@
-Visual\ Grid\ View\ Port=""
-API\ Key=""
+Visual\ Grid\ View\ Port="[[800,600]]"
+API\ Key="1zrrENwaTCQAJarVFhFKy1104vuNYcN1lKRrac8bKUXj8110"
 Server\ URL=""
 Application\ Name="Katalon Studio"
 Match\ Level="STRICT"
